Fixed spacing between students

--- a/frontend/src/components/StudentInfo/StudentInfoStyle.scss
+++ b/frontend/src/components/StudentInfo/StudentInfoStyle.scss
@@ -2,6 +2,7 @@
   width: 100%;
   font-family: Poppins, "sans-serif";
   color: #ffffff;
+  margin-bottom: 10px;
 
   .name-text, .name-text:disabled {
     margin-left: 10px;
